# ai-language-tutor

./: .gitignore  CLAUDE.md  Cargo.toml  DATABASE.md  docker-compose.yml
deployment/: README.md  main.tf  terraform.tfvars.example  variables.tf
docs/: websocket-client-integration.md
migrations/: 001_init.sql
src/: assistant.rs  bedrock.rs  cartesia.rs  error.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  tts.rs
src/auth/: mod.rs
src/db/: mod.rs  models.rs  pool.rs  repository.rs
src/replygen/: bedrock_impl.rs  intent.rs  intent_classifier.rs  interface.rs  mod.rs  openai_impl.rs  openai_intent_classifier.rs
src/replygen/prompts/: concept_explanation_prompt.txt  conversation_prompt.txt  grammar_question_prompt.txt  intent_classifier_prompt.txt  system_prompt.txt  translation_request_prompt.txt
src/stt/: cartesia_impl.rs  interface.rs  mod.rs
src/tts/: cartesia_impl.rs  interface.rs  mod.rs
src/tutor/: mod.rs
src/ws/: handler.rs  mod.rs  protocol.rs  server.rs
tests/: README.md  stt_integration_test.rs  test_audio.raw
