[package]
name = "language-learning-ai-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-bedrock = "1.136.0"
aws-sdk-bedrockruntime = "1.127.0"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
aws-config = "1.8.15"
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.9"